--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Hardhat files
+cache
+artifacts
+typechain
+typechain-types
+
 # Logs
 logs
 *.log
@@ -21,6 +27,7 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+coverage.json
 *.lcov
 
 # nyc test coverage
@@ -125,3 +132,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
