--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "test":"npx hardhat test"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "hardhat": "^2.17.1"
   },
+  "pre-commit": [
+    "test"
+  ],
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
     "hardhat-contract-sizer": "^2.10.0",
-    "hardhat-gas-reporter": "^1.0.9"
+    "hardhat-gas-reporter": "^1.0.9",
+    "pre-commit": "^1.2.2",
+    "save": "^2.9.0"
   }
 }
