--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "hardhat-project",
   "scripts": {
-    "test":"npx hardhat test"
+    "test": "npx hardhat test",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.17.1"
+    "hardhat": "^2.17.1",
+    "husky": "^8.0.3"
   },
   "pre-commit": [
     "test"
