--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hardhat-project",
   "scripts": {
     "test": "npx hardhat test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "deploy:test": "npx hardhat run --network testnet scripts/deploy.ts"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
@@ -14,6 +15,7 @@
   ],
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
+    "dotenv": "^16.3.1",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
     "pre-commit": "^1.2.2",
